--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- hello-->
   <meta charset="UTF-8">
   <title>Hindi to Telugu Learner</title>
   <link rel="stylesheet" href="style.css">
